[package]
name = "fmu-runner"
version = "0.4.4"
authors = ["Nikita Rushmanov <rush3nik@gmail.com>", "Marvin Struijk"]
edition = "2021"
description = "A high level Rust wrapper for executing FMU's that follow the FMI 2.0 standard."
repository = "https://github.com/Nikita240/fmu-runner-rs"
homepage = "https://github.com/Nikita240/fmu-runner-rs"
license = "MIT OR Apache-2.0"
keywords = ["model", "ode", "modelica", "fmu", "fmi"]
categories = ["science", "simulation", "api-bindings"]
readme = "README.md"
exclude = [".devcontainer", ".gitmodules", "tests"]

[dependencies]
libc = { version = "0.2", features = ["align"] }
log = { version = "0.4", features = ["std", "serde"] }
quick-xml = { version = "0.29.0", features = [
    "serialize",
    "serde",
    "serde-types",
] }
serde = "1.0.164"
zip = "0.6.6"
libfmi = { path = "libfmi", version = "=2.2.4" }
thiserror = "1.0.49"
tempfile = "3.8.0"
libloading = "0.8.1"
itertools = "0.13.0"

[dev-dependencies]
rand = "0.8.5"
rstest = "0.18.2"
force_injector = { path = "tests/force_injector" }
